Fix a couple warnings, update deps